kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  namespace: 
spec:
  rules:
  - host: foo.k8s-dev.bar-nextgen.info
    http:
      paths:
      - backend:
          service:
            name: auth
            port:
              number: 80
        path: /login
        pathType: Prefix
      - backend:
          service:
            name: auth
            port:
              number: 80
        path: /auth
        pathType: Prefix
      - backend:
          service:
            name: auth
            port:
              number: 80
        path: /foo
        pathType: Prefix
      - backend:
          service:
            name: hello
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - foo.k8s-dev.bar-nextgen.info
    secretName: wildcard-bar-domain-secret
